fix home shift for narrow display

--- a/styles/home-page/home.module.scss
+++ b/styles/home-page/home.module.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   position: relative;
   top: 0;
+  margin: 0%;
 }
 
 .columns {
